Use Gradle toolchain to specify the JDK version (#269)